# detectree2

./: .buildinfo  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  api.html  cluster.html  contributing.html  contribution.html  detectree2.data_loading.html  detectree2.html  detectree2.models.html  detectree2.preprocessing.html  detectree2.tests.html  environment.yaml  genindex.html  index.html  inference_test.py  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  train_swin.py  tutorial.html  tutorial_multi.html  usage.html  using-git.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: api.doctree  cluster.doctree  contributing.doctree  contribution.doctree  detectree2.data_loading.doctree  detectree2.doctree  detectree2.models.doctree  detectree2.preprocessing.doctree  detectree2.tests.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  tutorial.doctree  tutorial_multi.doctree  usage.doctree  using-git.doctree
.doctrees/tutorials/: 01_getting_started.doctree  02_data_preparation.doctree  03_training_and_evaluation.doctree  04_prediction.doctree  05_advanced_topics.doctree  index.doctree
.github/: FUNDING.yml
.github/workflows/: conda.yml  docker-test.yml  documentation.yaml  github-actions.yml  publish.yml  python-app.yml  python-ci.yml  pythonapp.yml  sphinx-ci.yml
.setup_scripts/: jupyter_tools.sh  vscode_settings.jsonc
_modules/: index.html
_sources/: api.rst.txt  cluster.rst.txt  contributing.rst.txt  detectree2.data_loading.rst.txt  detectree2.models.rst.txt  detectree2.preprocessing.rst.txt  detectree2.rst.txt  detectree2.tests.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  tutorial.rst.txt  tutorial_multi.rst.txt
_sources/tutorials/: 01_getting_started.rst.txt  02_data_preparation.rst.txt  index.rst.txt
conda/: README.md  environment.yaml  meta.yaml
detectree2/: __init__.py  constants.py
detectree2/R/: README.md  change_analysis_mortality_growth.R  cleanCrowns.R
detectree2/data_loading/: custom.py  gdrive.py  gdrivePull.sh  gee_download.py  quickstart.py
detectree2/models/: F1_calculator.py  NewF1Calculator.py  backbones_swin.py  custom_nms.py  custom_rpn.py  evaluation.py  outputs.py  predict.py  reproject.py  train.py  train_tune.py
detectree2/preprocessing/: FixJsonForTrain.py  folds.py  tiling.py  tiling_multiclass  toFolders.py
detectree2/tests/: test_all.py  test_data.py  test_evaluation.py  test_models.py  test_predict.py  test_preprocessing.py
docker/: Dockerfile
docs/: index.md  requirements.txt
docs/source/: cluster.rst  conf.py  contributing.rst  contribution.rst  index.rst  installation.rst  tutorial.rst  tutorial_multi.rst  usage.rst  using-git.rst
examples/: predict_ex.py  tiling_ex.py  training_ex.py
model_garden/: 220723_withParacouUAV.pth  230103_randresize_full.pth  README.md  urban_trees_Cambridge_20230630.pth
notebooks/: README.md
notebooks/241106_colab_JB/: tile_multiclass_JB.ipynb  tilingJB.ipynb  tiling_ms_JB.ipynb  trainingJB.ipynb  training_ms_JB.ipynb
notebooks/colab/: 01_getting_started.ipynb  02_data_preparation.ipynb  03_training_and_evaluation.ipynb  04_prediction.ipynb  README.md  evaluationJB.ipynb  predictJB.ipynb  recombineJB.ipynb  tiling.ipynb  tilingJB.ipynb  trainingJB.ipynb
notebooks/colabJB/: tilingJB.ipynb
notebooks/colabJH/: README.md  Reprojecting_JH.ipynb  Tiling_JH.ipynb
notebooks/colabKoay/: mask_rcnn_optimizeversion.ipynb
notebooks/colabPan/: FixJsonForTrain.ipynb  README.md  maskrcnn_predict.ipynb  maskrcnn_train.ipynb  tiling.ipynb  tiling_batch.ipynb
notebooks/colabSeb/: README.md  predicting.ipynb  tiling.ipynb
notebooks/mask_rcnn/: README.md  mask_rcnn_optimizeversion.ipynb  maskrcnn_train_test.ipynb
notebooks/turing/: README.md
requirements/: README.md  dev-requirements.txt  environment.yml  requirements.txt  test-requirements.txt
src/: README.md  constants.py
tutorials/: 01_getting_started.html  02_data_preparation.html  03_training_and_evaluation.html  04_prediction.html  05_advanced_topics.html  index.html
(+28 files in other folders)
